<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ConfigureActivity">

    <TextView
        android:id="@+id/angleLabel"
        android:layout_width="287dp"
        android:layout_height="32dp"
        android:layout_marginEnd="81dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/angle_of_detection"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/angleTextBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/angle_textbox_hint"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/angleLabel" />

    <Button
        android:id="@+id/updateAngleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="11dp"
        android:layout_marginStart="16dp"
        android:onClick="setAngle"
        android:text="@string/update_angle_button"
        app:layout_constraintBaseline_toBaselineOf="@+id/angleTextBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/angleTextBox" />

    <TextView
        android:id="@+id/setBoundaryLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="138dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/boundary_label"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/angleTextBox" />

    <TextView
        android:id="@+id/minXLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/min_x_label"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        app:layout_constraintBaseline_toBaselineOf="@+id/minXTextbox"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/maxXLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/max_x_label"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        app:layout_constraintBaseline_toBaselineOf="@+id/maxXTextbox"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/minYLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/min_y_label"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        app:layout_constraintBaseline_toBaselineOf="@+id/minYTextbox"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/minYLabel2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/max_y_label"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        app:layout_constraintBaseline_toBaselineOf="@+id/maxYTextbox"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/minXTextbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="90dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:inputType="numberSigned|numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/minXLabel"
        app:layout_constraintTop_toBottomOf="@+id/setBoundaryLabel" />

    <EditText
        android:id="@+id/maxXTextbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="85dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="numberSigned|numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/maxXLabel"
        app:layout_constraintTop_toBottomOf="@+id/minXTextbox" />

    <EditText
        android:id="@+id/minYTextbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="91dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="numberSigned|numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/minYLabel"
        app:layout_constraintTop_toBottomOf="@+id/maxXTextbox" />

    <EditText
        android:id="@+id/maxYTextbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="85dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="numberSigned|numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/minYLabel2"
        app:layout_constraintTop_toBottomOf="@+id/minYTextbox" />

    <Button
        android:id="@+id/updateBoundaryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="214dp"
        android:layout_marginTop="16dp"
        android:onClick="setBoundary"
        android:text="@string/update_boundary_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/maxYTextbox" />
</android.support.constraint.ConstraintLayout>